--- a/web/package.json
+++ b/web/package.json
@@ -29,7 +29,9 @@
         "@sveltejs/kit": "^2.0.0",
         "@sveltejs/vite-plugin-svelte": "^3.0.0",
         "@types/eslint__js": "^8.42.3",
+        "compare-versions": "^6.1.0",
         "eslint": "^8.57.0",
+        "mdsvex": "^0.11.2",
         "svelte": "^4.2.7",
         "svelte-check": "^3.6.0",
         "tslib": "^2.4.1",
