--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "cobalt",
-    "description": "save what you love",
+    "name": "astatine",
+    "description": "get what you want without the fluff",
     "version": "7.14.5",
-    "author": "imput",
-    "exports": "./src/cobalt.js",
+    "author": "the astatine authors",
+    "exports": "./src/astatine.js",
     "type": "module",
     "engines": {
         "node": ">=18"
     },
     "scripts": {
-        "start": "node src/cobalt",
+        "start": "node src/astatine",
         "setup": "node src/modules/setup",
         "test": "node src/util/test",
         "build": "node src/modules/buildStatic",
@@ -17,13 +17,13 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/imputnet/cobalt.git"
+        "url": "git+https://github.com/justuseastatine/astatine.git"
     },
     "license": "AGPL-3.0",
     "bugs": {
-        "url": "https://github.com/imputnet/cobalt/issues"
+        "url": "https://github.com/justuseastatine/astatine/issues"
     },
-    "homepage": "https://github.com/imputnet/cobalt#readme",
+    "homepage": "https://github.com/justuseastatine/astatine#readme",
     "dependencies": {
         "content-disposition-header": "0.6.0",
         "cors": "^2.8.5",
